feat: add dark theme toggle capability

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,137 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 @theme {
-  --color-text-base: #111410;
-  --color-text-50: #f2f4f1;
-  --color-text-100: #e4e8e3;
-  --color-text-200: #c9d2c6;
-  --color-text-300: #aebbaa;
-  --color-text-400: #93a48e;
-  --color-text-500: #788e71;
-  --color-text-600: #60715b;
-  --color-text-700: #485544;
-  --color-text-800: #30392d;
-  --color-text-900: #181c17;
-  --color-text-950: #0c0e0b;
+  /* light theme colors */
+  --color-light-text: #111410;
+  --color-light-text-50: #f2f4f1;
+  --color-light-text-100: #e4e8e3;
+  --color-light-text-200: #c9d2c6;
+  --color-light-text-300: #aebbaa;
+  --color-light-text-400: #93a48e;
+  --color-light-text-500: #788e71;
+  --color-light-text-600: #60715b;
+  --color-light-text-700: #485544;
+  --color-light-text-800: #30392d;
+  --color-light-text-900: #181c17;
+  --color-light-text-950: #0c0e0b;
 
-  --color-background-base: #fcfdfc;
-  --color-background-50: #f0f5f0;
-  --color-background-100: #e0ebe0;
-  --color-background-200: #c2d6c2;
-  --color-background-300: #a3c2a3;
-  --color-background-400: #85ad85;
-  --color-background-500: #669966;
-  --color-background-600: #527a52;
-  --color-background-700: #3d5c3d;
-  --color-background-800: #293d29;
-  --color-background-900: #141f14;
-  --color-background-950: #0a0f0a;
+  --color-light-background: #fcfdfc;
+  --color-light-background-50: #f0f5f0;
+  --color-light-background-100: #e0ebe0;
+  --color-light-background-200: #c2d6c2;
+  --color-light-background-300: #a3c2a3;
+  --color-light-background-400: #85ad85;
+  --color-light-background-500: #669966;
+  --color-light-background-600: #527a52;
+  --color-light-background-700: #3d5c3d;
+  --color-light-background-800: #293d29;
+  --color-light-background-900: #141f14;
+  --color-light-background-950: #0a0f0a;
 
-  --color-primary-base: #73b663;
-  --color-primary-50: #eff7ee;
-  --color-primary-100: #e0efdc;
-  --color-primary-200: #c1deba;
-  --color-primary-300: #a2ce97;
-  --color-primary-400: #83be74;
-  --color-primary-500: #64ad52;
-  --color-primary-600: #508b41;
-  --color-primary-700: #3c6831;
-  --color-primary-800: #284521;
-  --color-primary-900: #142310;
-  --color-primary-950: #0a1108;
+  --color-light-primary: #73b663;
+  --color-light-primary-50: #eff7ee;
+  --color-light-primary-100: #e0efdc;
+  --color-light-primary-200: #c1deba;
+  --color-light-primary-300: #a2ce97;
+  --color-light-primary-400: #83be74;
+  --color-light-primary-500: #64ad52;
+  --color-light-primary-600: #508b41;
+  --color-light-primary-700: #3c6831;
+  --color-light-primary-800: #284521;
+  --color-light-primary-900: #142310;
+  --color-light-primary-950: #0a1108;
 
-  --color-secondary-base: #abdf9f;
-  --color-secondary-50: #eef9ec;
-  --color-secondary-100: #ddf2d9;
-  --color-secondary-200: #bce6b3;
-  --color-secondary-300: #9ad98c;
-  --color-secondary-400: #79cc66;
-  --color-secondary-500: #57bf40;
-  --color-secondary-600: #469933;
-  --color-secondary-700: #347326;
-  --color-secondary-800: #234d19;
-  --color-secondary-900: #11260d;
-  --color-secondary-950: #091306;
+  --color-light-secondary: #abdf9f;
+  --color-light-secondary-50: #eef9ec;
+  --color-light-secondary-100: #ddf2d9;
+  --color-light-secondary-200: #bce6b3;
+  --color-light-secondary-300: #9ad98c;
+  --color-light-secondary-400: #79cc66;
+  --color-light-secondary-500: #57bf40;
+  --color-light-secondary-600: #469933;
+  --color-light-secondary-700: #347326;
+  --color-light-secondary-800: #234d19;
+  --color-light-secondary-900: #11260d;
+  --color-light-secondary-950: #091306;
 
-  --color-accent-base: #7fdf68;
-  --color-accent-50: #edfbea;
-  --color-accent-100: #dcf6d5;
-  --color-accent-200: #b8edab;
-  --color-accent-300: #95e481;
-  --color-accent-400: #71db57;
-  --color-accent-500: #4ed22d;
-  --color-accent-600: #3ea824;
-  --color-accent-700: #2f7e1b;
-  --color-accent-800: #1f5412;
-  --color-accent-900: #102a09;
-  --color-accent-950: #081504;
+  --color-light-accent: #7fdf68;
+  --color-light-accent-50: #edfbea;
+  --color-light-accent-100: #dcf6d5;
+  --color-light-accent-200: #b8edab;
+  --color-light-accent-300: #95e481;
+  --color-light-accent-400: #71db57;
+  --color-light-accent-500: #4ed22d;
+  --color-light-accent-600: #3ea824;
+  --color-light-accent-700: #2f7e1b;
+  --color-light-accent-800: #1f5412;
+  --color-light-accent-900: #102a09;
+  --color-light-accent-950: #081504;
+
+  /* dark theme colors */
+  --color-dark-text: #ecefeb;
+  --color-dark-text-50: #0c0e0b;
+  --color-dark-text-100: #181c17;
+  --color-dark-text-200: #30392d;
+  --color-dark-text-300: #485544;
+  --color-dark-text-400: #60715b;
+  --color-dark-text-500: #788e71;
+  --color-dark-text-600: #93a48e;
+  --color-dark-text-700: #aebbaa;
+  --color-dark-text-800: #c9d2c6;
+  --color-dark-text-900: #e4e8e3;
+  --color-dark-text-950: #f2f4f1;
+
+  --color-dark-background: #020302;
+  --color-dark-background-50: #0a0f0a;
+  --color-dark-background-100: #141f14;
+  --color-dark-background-200: #293d29;
+  --color-dark-background-300: #3d5c3d;
+  --color-dark-background-400: #527a52;
+  --color-dark-background-500: #669966;
+  --color-dark-background-600: #85ad85;
+  --color-dark-background-700: #a3c2a3;
+  --color-dark-background-800: #c2d6c2;
+  --color-dark-background-900: #e0ebe0;
+  --color-dark-background-950: #f0f5f0;
+
+  --color-dark-primary: #5a9c49;
+  --color-dark-primary-50: #0a1108;
+  --color-dark-primary-100: #142310;
+  --color-dark-primary-200: #284521;
+  --color-dark-primary-300: #3c6831;
+  --color-dark-primary-400: #508b41;
+  --color-dark-primary-500: #64ad52;
+  --color-dark-primary-600: #83be74;
+  --color-dark-primary-700: #a2ce97;
+  --color-dark-primary-800: #c1deba;
+  --color-dark-primary-900: #e0efdc;
+  --color-dark-primary-950: #eff7ee;
+
+  --color-dark-secondary: #2c6020;
+  --color-dark-secondary-50: #091306;
+  --color-dark-secondary-100: #11260d;
+  --color-dark-secondary-200: #234d19;
+  --color-dark-secondary-300: #347326;
+  --color-dark-secondary-400: #469933;
+  --color-dark-secondary-500: #57bf40;
+  --color-dark-secondary-600: #79cc66;
+  --color-dark-secondary-700: #9ad98c;
+  --color-dark-secondary-800: #bce6b3;
+  --color-dark-secondary-900: #ddf2d9;
+  --color-dark-secondary-950: #eef9ec;
+
+  --color-dark-accent: #389720;
+  --color-dark-accent-50: #081504;
+  --color-dark-accent-100: #102a09;
+  --color-dark-accent-200: #1f5412;
+  --color-dark-accent-300: #2f7e1b;
+  --color-dark-accent-400: #3ea824;
+  --color-dark-accent-500: #4ed22d;
+  --color-dark-accent-600: #71db57;
+  --color-dark-accent-700: #95e481;
+  --color-dark-accent-800: #b8edab;
+  --color-dark-accent-900: #dcf6d5;
+  --color-dark-accent-950: #edfbea;
 }
